--- a/url-shortner-service-aws.yaml
+++ b/url-shortner-service-aws.yaml
@@ -1,7 +1,7 @@
 spring:
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
       naming-strategy: org.hibernate.cfg.ImprovedNamingStrategy
     show-sql: true
   datasource:
